# cs-agent-triage-eval

./: .env.example  .gitignore  project-1-brief-v2.md  pyproject.toml
config/: taxonomy.yaml
data/: accounts.json  generation_meta.json  labels.csv  tickets.json
docs/: BRIEF.md  LABELING_GUIDE.md
scripts/: generate_tickets.py  label_tickets.py  smoke.py
src/triage/: __init__.py
src/triage/provider/: __init__.py  anthropic_provider.py  base.py  deepseek.py  factory.py  pricing.py
