[project]
name = "cs-agent"
version = "0.1.0"
description = "Ticket triage agent, eval harness, and account memory — a portfolio project."
requires-python = ">=3.11"
dependencies = [
    # Anthropic's official SDK — used by the Anthropic adapter (typed, handles retries).
    "anthropic>=0.40",
    # Raw HTTP client — used by the DeepSeek adapter so we see the wire format directly.
    "httpx>=0.27",
    # Loads .env into environment variables at startup.
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# src/ layout: the importable package lives at src/triage. `uv sync` installs it
# editable, so `import triage` works from scripts and tests without PYTHONPATH hacks.
[tool.hatch.build.targets.wheel]
packages = ["src/triage"]
